--- a/code-solo.html
+++ b/code-solo.html
@@ -5,10 +5,13 @@
     <style>
         /* Wally the Wombat wants to update their profile - let's help them out. */
         /* 1. Change the color of the <h1> tag. Remember, the property to change the color of text is color and the value is the name of the color you want (or use a hex code!) */
-        
+        h1 {
+      color:#E9967A;
+    }
         
         /* 2. Using body as our selector, change the background-color to whatever color you want. */
         body {
+          background-color:#DEB887 ;
             font-family: Arial, sans-serif;
             text-align: center;
         }
@@ -23,7 +26,8 @@
         /* 3. Using wombat-image class selector, change the value of max-width to 400px. */
         /* 4. Still using the wombat-image class selector, add a property called border-radius and set the value to 50%. What happens? */
         .wombat-image {
-            max-width: 300px;
+          border-radius: 50%;
+            max-width: 400px;
         }
     </style>
 </head>
